# Battle-of-Teams-RL-python-project

./: .gitignore  README.md  battle_of_teams.ipynb  main.py  pyproject.toml  requirements.txt
environment/: rl_model.py
game/: ai_player.py  controller.py  model.py  view.py
game/environment/: BattleOfTeams-v0.pt  BattleOfTeams-v1.pt  battle_env.json  battle_env_v1.json
