[tool.poetry]
name = "battleofteams"
version = "0.1.0"
description = "The project is a reworking of a coursework completed by a first-year student, originally in C, with the addition of a RL algorithm."
authors = ["Alexander Klepikov <sklepikov2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ruff = "==0.15.16"
torch = "==2.12.0"
torchvision = "==0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
